--- a/src/Makefile
+++ b/src/Makefile
@@ -329,4 +329,4 @@ $(E_STRATEGY): $(L_STRATEGY_M)
 # ====================================================================
 
 clean:
-	rm *.o *.html
+	rm *.o *.html *.js
