targets for inputfile.cc compilation

--- a/src/Makefile
+++ b/src/Makefile
@@ -51,7 +51,8 @@ H_PROJECTDETAIL     =   projectdetail.h $(H_LOGIN)
 H_CLASSDETAILS      =   classdetail.h $(H_DETAILS)
 H_ROLNODETAIL       =   rollnodetail.h $(H_DETAILS)
 H_ROOMDETAIL        =   roomdetail.h $(H_DETAILS)
-H_STRATEGY          =   strategy.h $(H_DETAILS)
+H_INPUTFILE         =   inputfile.h $(H_DETAILS)
+H_STRATEGY          =   strategy.h $(H_INPUTFILE)
 
 # ====================================================================
 #	Variables for definition files (CC_FILENAME)
@@ -71,6 +72,7 @@ CC_CLASSDETAILS	    =   classdetail.cc
 CC_ROLLNODETAIL     =   rollnodetail.cc
 CC_ROOMDETAIL       =   roomdetail.cc
 CC_STRATEGY         =   strategy.cc
+CC_INPUTFILE        =   inputfile.cc
 
 # ====================================================================
 #	Variables for main method files (M_FILENAME)
@@ -109,6 +111,7 @@ O_CLASSDETAILS      =   classdetail.o
 O_ROLLNODETAIL      =   rollnodetail.o
 O_ROOMDETAIL        =   roomdetail.o
 O_STRATEGY          =   strategy.o
+O_INPUTFILE         =   inputfile.o
 
 # Object files of main files
 
@@ -139,7 +142,8 @@ L_PROJECTDETAIL =   $(L_LOGIN) $(O_PROJECTDETAIL)
 L_CLASSDETAILS	=	$(L_DETAILS) $(O_CLASSDETAILS)
 L_ROLLNODETAIL	=	$(L_DETAILS) $(O_ROLLNODETAIL)
 L_ROOMDETAIL    =   $(L_DETAILS) $(O_ROOMDETAIL)
-L_STRATEGY      =   $(L_DETAILS) $(O_STRATEGY)
+L_INPUTFILE     =   $(L_DETAILS) $(O_INPUTFILE)
+L_STRATEGY      =   $(L_INPUTFILE) $(O_STRATEGY)
 
 # Linking of main files
 
@@ -228,6 +232,9 @@ $(O_ROOMDETAIL): $(CC_ROOMDETAIL) $(H_ROOMDETAIL)
 
 $(O_STRATEGY): $(CC_STRATEGY) $(H_STRATEGY)
 	$(CC) $(CFLAG) $(CC_STRATEGY) $(LMYSQL)
+
+$(O_INPUTFILE): $(CC_INPURFILE) $(H_INPUTFILE)
+	$(CC) $(CFLAG) $(CC_INPUTFILE) $(LMYSQL)
 
 # Compiling Mian files
 
